# PaperForge

./: .env.example  .gitignore  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json
.paperforge/: platform.sqlite
python_backend/: pyproject.toml
python_backend/agent_runtime/: README.md  __init__.py  __main__.py  bitget_client.py  bitget_mcp.py  crypto_research_clients.py  env.py  memory_store.py  models.py  planner.py  platform_store.py  quant_flow.py  quant_tools.py  sandbox_executor.py  saved_strategy_store.py  server.py  skill_catalog.py  strategy_lab_agents.py  strategy_lab_loop.py  strategy_lab_single_agent.py  strategy_lab_store.py  strategy_library_eval.py  strategy_library_store.py  workflows.py
python_backend/agent_runtime/skills/evidence-review/: SKILL.md
python_backend/agent_runtime/skills/human-approval/: SKILL.md
python_backend/agent_runtime/skills/market-data-context/: SKILL.md
python_backend/agent_runtime/skills/mission-intake/: SKILL.md
python_backend/agent_runtime/skills/mission-memory/: SKILL.md
python_backend/agent_runtime/skills/paper-trading/: SKILL.md
python_backend/agent_runtime/skills/quant-backtest/: SKILL.md
python_backend/agent_runtime/skills/risk-scoring/: SKILL.md
python_backend/agent_runtime/skills/strategy-lab-backtest-analysis/: SKILL.md
python_backend/agent_runtime/skills/strategy-lab-code-generation/: SKILL.md
python_backend/tests/: test_bitget_client.py  test_crypto_research_clients.py  test_strategy_lab_single_agent.py  test_strategy_library.py  test_strategy_provenance.py
(+68 files in other folders)
